cmake_minimum_required(VERSION 3.26)
set(CMAKE_CXX_STANDARD 23)
# enable LTO
include(CheckIPOSupported)
add_library(gc STATIC src/gc.h src/gc.cpp src/heap.h src/heap.cpp)
set_property(TARGET gc PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
if (CMAKE_BUILD_TYPE STREQUAL "Debug" OR  CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    target_compile_definitions(gc PUBLIC DEBUG)
endif()

add_executable(test src/test.cpp)
set_property(TARGET test PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
target_link_libraries(test gc)
add_executable(test_json src/test_json.cpp)
set_property(TARGET test_json PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
target_link_libraries(test_json gc)